apps/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    network-egress-deny-all: "true"
