apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4533
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "1.0"
              memory: "2Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
              readOnly: true
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music-pvc
          readOnly: true
        - name: tmp
          emptyDir: {}
