apps/navidrome/ingress-wan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-wan
  namespace: navidrome
spec:
  entryPoints:
    - websecure-wan-traffic
  routes:
    - match: Host(`navidrome.wevelsiep.com`)
      kind: Rule
      services:
        - name: navidrome
          port: 80
  tls:
    options:
      name: mtls-required
      namespace: traefik
