apps/navidrome/cnp-ingress-traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: navidrome
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
