apps/navidrome/cnp-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: navidrome
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-needle-ingress
  namespace: navidrome
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: needle
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
